cluster-critical-apps/traefik/templates/traefik-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboardtls
  annotations:
    # used only to automate certificate and dns. Point to metrics to ensure its not used
    traefik.ingress.kubernetes.io/router.entrypoints: metrics
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.framsburg.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: "traefik"
                port:
                  number: 80
  tls:
    - hosts:
      - traefik.framsburg.dev
      secretName: traefik-framsburg-dev-tls
